--- a/working_timer/src/assets/style.css
+++ b/working_timer/src/assets/style.css
@@ -60,6 +60,14 @@ li {
   cursor: pointer;
   color: rgb(119, 119, 238);
 }
+span.name {
+  display: inline-block;
+  width: 300px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-text-overflow: ellipsis;
+}
 .fadeIn {
   animation-name: fadeIn;
   animation-duration: 1s;
@@ -80,4 +88,26 @@ li {
 }
 .v-enter-to {
   opacity: 1;
+}
+
+@media screen and (max-width:414px){
+  .container {
+    /* background-color: pink; */
+    width: 400px;
+    margin: auto;
+  }
+  .container h1 {
+    font-size: 24px;
+    padding: 10px 0;
+  }
+  .container .input {
+    margin-top: 20px;
+  }
+  .container h1,
+  .container .input {
+    margin-left: 140px;
+  }
+  .container .input button {
+    margin-left: 10px;
+  }
 }
